fix: OPENING max 45s contract, dominant clan tie→shared helper, roster coverage precondition, permutation-stable partition, GroupKey removal, phase tests